--- a/app/index.html
+++ b/app/index.html
@@ -17,11 +17,10 @@
     </head>
     <body>
         <!--Header-->
-        <header class="l--constrain">
+        <header class="grid">
             <div class="grid grid__6">
-                <div><a href="#" class="logo"></a></div>
-                <h1 class="singer-name">Amanda Runge</h1>
-                <p><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Ice Cream Lover</span></p>
+                <h1 class="singer-name"><a href="#">Amanda Runge</a></h1>
+                <p class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Ice Cream Lover</p>
             </div>
             <nav class="grid grid__6">
                 <ul class="navbar-link">
@@ -31,137 +30,128 @@
             </nav>
         </header>
         <!--Hero -->
-        <section class="l--constrain">
-            <div class="grid grid__12">
-                <div class="hero">
-                </div>
+        <section class="grid">
+            <div class="hero">
+                
             </div>
         </section>
-        <section class="l--constrain">
-            <div class="grid grid__offset-1 grid__10">
-                <legend class="grid grid__6">
-                    <h2>About</h2>
-                </legend>
-                <div class="grid grid__6">
-                    <div class="text">
-                        <p>Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
-                    </div>
-                </div>
-                <div class="grid grid__6">
-                    <div class="text">
-                        <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
-                        <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
-                    </div>
-                </div>
+        <!--About-->
+        <section class="grid">
+            <div class="grid grid__6">
+                <h2>About</h2>
+                <p class="text">Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
+            </div>
+            <div class="grid grid__6">
+                <p class="text">She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
+                <p class="text">Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
             </div>
         </section>
         <!--Begin MailChimp Signup Form -->
-        <section class="l--constrain">
-            <div class="grid grid__offset-1 grid__10">
-                <div id="mc_embed_signup">
-                    <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef"
-                          method="post" 
-                          id="mc-embedded-subscribe-form" 
-                          name="mc-embedded-subscribe-form" 
-                          class="validate" 
-                          target="_blank" 
-                          novalidate>
-                        <fieldset id="mc_embed_signup_scroll">
-                            <div class="grid grid__12">
-                                <legend>
-                                    <h2>Mailing List</h2>
-                                </legend>
-                                <div class="indicates-required">
-                                    <p><span class="asterisk">*</span> indicates required</p>
-                                </div>
+        <section class="grid">
+            <legend>
+                <h2>Mailing List</h2>
+            </legend>
+            <div id="mc_embed_signup">
+                <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef"
+                      method="post" 
+                      id="mc-embedded-subscribe-form" 
+                      name="mc-embedded-subscribe-form" 
+                      class="validate" 
+                      target="_blank" 
+                      novalidate>
+                    <fieldset id="mc_embed_signup_scroll">
+                        <div>
+
+                            <div class="indicates-required">
+                                <p><span class="asterisk">*</span> indicates required</p>
                             </div>
-                            <ul>
-                                <li class="mc-field-group">
-                                    <div class="grid grid__12">
-                                        <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-                                        <input type="email"
-                                               value="" 
-                                               name="EMAIL" 
-                                               class="required email" 
-                                               id="mce-EMAIL">
+                        </div>
+                        <ul>
+                            <li class="mc-field-group">
+                                <div class="grid grid__12">
+                                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
+                                    <input type="email"
+                                           value="" 
+                                           name="EMAIL" 
+                                           class="required email" 
+                                           id="mce-EMAIL">
+                                </div>
+                            </li>
+                            <li class="mc-field-group">
+                                <div class="grid grid__5">
+                                    <label for="mce-FNAME">First Name </label>
+                                    <input type="text" 
+                                           value="" 
+                                           name="FNAME" 
+                                           class=""
+                                           id="mce-FNAME">
+                                </div>
+                                <div class="grid grid__offset-1 grid__6">
+                                    <label for="mce-LNAME">Last Name </label>
+                                    <input type="text"
+                                           value="" 
+                                           name="LNAME" 
+                                           class="" 
+                                           id="mce-LNAME">
+                                <div>
+                            </li>
+                            <li>
+                                <ul class="mc-field-group input-group">
+                                    <li class="grid grid__5">
+                                        <strong>Email Format</strong>
+                                    </li>
+                                    <li class="grid grid__3">
+                                        <label for="mce-EMAILTYPE-0">html</label>
+                                        <input type="radio" 
+                                               value="html" 
+                                               name="EMAILTYPE" 
+                                               id="mce-EMAILTYPE-0">
+                                    </li>
+                                    <li class="grid grid__2">
+                                        <label for="mce-EMAILTYPE-1">text</label>
+                                        <input type="radio" 
+                                               value="text" 
+                                               name="EMAILTYPE" 
+                                               id="mce-EMAILTYPE-1">
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <div id="mce-responses" class="clear">
+                                    <div class="response" id="mce-error-response" style="display:none">
                                     </div>
-                                </li>
-                                <li class="mc-field-group">
-                                    <div class="grid grid__5">
-                                        <label for="mce-FNAME">First Name </label>
+                                    <div class="response" id="mce-success-response" style="display:none">  
+                                    </div>
+                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
                                         <input type="text" 
-                                               value="" 
-                                               name="FNAME" 
-                                               class=""
-                                               id="mce-FNAME">
+                                               name="b_1fe6ec52f1d714ac7a02b1fb1_a21b19ecef" 
+                                               tabindex="-1" 
+                                               value="">
                                     </div>
-                                    <div class="grid grid__offset-1 grid__6">
-                                        <label for="mce-LNAME">Last Name </label>
-                                        <input type="text"
-                                               value="" 
-                                               name="LNAME" 
-                                               class="" 
-                                               id="mce-LNAME">
-                                    <div>
-                                </li>
-                                <li>
-                                    <ul class="mc-field-group input-group">
-                                        <li class="grid grid__5">
-                                            <strong>Email Format</strong>
-                                        </li>
-                                        <li class="grid grid__3">
-                                            <label for="mce-EMAILTYPE-0">html</label>
-                                            <input type="radio" 
-                                                   value="html" 
-                                                   name="EMAILTYPE" 
-                                                   id="mce-EMAILTYPE-0">
-                                        </li>
-                                        <li class="grid grid__2">
-                                            <label for="mce-EMAILTYPE-1">text</label>
-                                            <input type="radio" 
-                                                   value="text" 
-                                                   name="EMAILTYPE" 
-                                                   id="mce-EMAILTYPE-1">
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <div id="mce-responses" class="clear">
-                                        <div class="response" id="mce-error-response" style="display:none">
-                                        </div>
-                                        <div class="response" id="mce-success-response" style="display:none">  
-                                        </div>
-                                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                            <input type="text" 
-                                                   name="b_1fe6ec52f1d714ac7a02b1fb1_a21b19ecef" 
-                                                   tabindex="-1" 
-                                                   value="">
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="clear">
-                                        <button type="submit" 
-                                                value="Subscribe" 
-                                                name="subscribe" 
-                                                id="mc-embedded-subscribe" 
-                                                class="button">Submit
-                                        </button>
-                                    </div>
-                                </li>
-                            </ul>
-                        </fieldset>
-                    </form>
-                </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="clear">
+                                    <button type="submit" 
+                                            value="Subscribe" 
+                                            name="subscribe" 
+                                            id="mc-embedded-subscribe" 
+                                            class="button">Submit
+                                    </button>
+                                </div>
+                            </li>
+                        </ul>
+                    </fieldset>
+                </form>
             </div>
         </section>
         <!--Calendar-->
-        <section class="l--constrain">
-            <div class="grid grid__offset-1 grid__10">
-            <legend class="grid grid__6">
+        <section class="grid">
+            <legend>
                 <h2>Calendar</h2>
             </legend>
+            <div>
                 <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" 
                         width="100%"
                         height="550" 
@@ -169,23 +159,16 @@
                         scrolling="no"
                         min-width="320">
                 </iframe>
-            </div>
+            <div>
         </section>
         <!--Gallery-->
-        <section class="l--constrain">
-            <div class="grid grid__offset-1 grid__10">
-                <legend class="grid grid__6">
-                    <h2>Gallery</h2>
-                </legend>
-            </div>
+        <section class="grid">
+            <legend>
+                <h2>Gallery</h2>
+            </legend>
         </section>
-        <div class="l--constrain">
-            <div class="grid grid__12">
-                <div class="footer">
-                    <p><a>Amanda</a></p>                   
-                </div>
-            </div>
-        </div>  
+        <footer class="footer">
+            <p>Amanda</p>
+        </footer>
     </body>
-    <script src="#"></script>
 </html>
